# lasso

./: .gitignore  AUTHORS  FAQ.rst  Jenkinsfile  NEWS  autogen.sh  configure.ac  jenkins.sh
bindings/: Makefile.am  bindings.py  overrides.xml
bindings/java/: Makefile.am
bindings/perl/: Makefile.am  test.sh
bindings/php5/: php_code.py  wrapper_source.py
bindings/php7/: Makefile.am  lang.py  wrapper_source.py  wrapper_source_top.c
bindings/php7/tests/: Makefile.am  binding_tests.sh  profile_tests.php  profile_tests.sh
bindings/python/: Makefile.am  lang.py  wrapper_top.c
bindings/python/examples/: get_attributes_from_assertion.py
bindings/python/tests/: Makefile.am  XmlTestRunner.py  binding_tests.py  idwsf1_tests.py  idwsf2_tests.py  profiles_tests.py  tests.py
debian-buster/: changelog  control  liblasso3.symbols  rules
debian-jessie/: rules
debian-stretch/: changelog  control  control.in  php5-lasso.substvars  rules  watch
docs/lasso-book/: check-functions.py
docs/lasso-book/figures/: Makefile.am
docs/reference/lasso/: Makefile.am  lasso-docs.xml
lasso/: Makefile.am  build_strerror.py  debug.h  extract_sections.py  extract_symbols.py  extract_types.py  key.c  lasso.c  logging.h  utils.h
lasso/id-ff/: defederation.c  federation.c  identity.c  lecp.c  login.c  logout.c  name_identifier_mapping.c  name_registration.c  profile.c  provider.c  server.c  server.h  session.c
lasso/id-wsf/: authentication.c  data_service.c  discovery.c  interaction_profile_service.c  wsf_profile.c
lasso/id-wsf-2.0/: data_service.c  discovery.c  profile.c
lasso/saml-2.0/: assertion_query.c  ecp.c  login.c  name_id_management.c  profile.c
lasso/xml/: Makefile.am  disco_authenticate_requester.c  disco_authenticate_session_context.c  disco_authorize_requester.c  disco_credentials.c  disco_description.c  disco_encrypt_resource_id.c  disco_encrypted_resource_id.c  disco_generate_bearer_token.c  disco_insert_entry.c  disco_modify.c  disco_modify_response.c  disco_options.c  disco_query.c  disco_query_response.c  disco_remove_entry.c  disco_requested_service_type.c  disco_resource_id.c  disco_resource_offering.c  disco_send_single_logout.c  disco_service_instance.c  dst_data.c  dst_modification.c  dst_modify.c  dst_modify_response.c  dst_new_data.c  dst_query.c  dst_query_item.c  dst_query_response.c  is_help.c  is_inquiry.c  is_inquiry_element.c  is_interaction_request.c  is_interaction_response.c  is_interaction_statement.c  is_item.c  is_parameter.c  is_redirect_request.c  is_select.c  is_text.c  (+72 more)
lasso/xml/dsig/: ds_key_info.c  ds_key_value.c  ds_rsa_key_value.c  ds_x509_data.c
lasso/xml/ecp/: ecp_relaystate.c  ecp_request.c  ecp_response.c
lasso/xml/id-wsf-2.0/: disco_abstract.c  disco_endpoint_context.c  disco_keys.c  disco_options.c  disco_provider_id.c  disco_query.c  disco_query_response.c  disco_requested_service.c  disco_security_context.c  disco_service_context.c  disco_service_type.c  disco_svc_md_association_add.c  disco_svc_md_association_add_response.c  disco_svc_md_association_delete.c  disco_svc_md_association_delete_response.c  disco_svc_md_association_query.c  disco_svc_md_association_query_response.c  disco_svc_md_delete.c  disco_svc_md_delete_response.c  disco_svc_md_query.c  disco_svc_md_query_response.c  disco_svc_md_register.c  disco_svc_md_register_response.c  disco_svc_md_replace.c  disco_svc_md_replace_response.c  disco_svc_metadata.c  dst_data_response_base.c  dst_delete_item_base.c  dst_delete_response.c  dst_request.c  dst_result_query_base.c  dst_test_item_base.c  dstref_app_data.c  dstref_create.c  dstref_create_item.c  dstref_create_response.c  dstref_data.c  dstref_data_response.c  dstref_delete.c  dstref_delete_item.c  (+95 more)
lasso/xml/saml-2.0/: saml2_action.c  saml2_advice.c  saml2_assertion.c  saml2_attribute.c  saml2_attribute_statement.c  saml2_attribute_value.c  saml2_audience_restriction.c  saml2_authn_context.c  saml2_authn_statement.c  saml2_authz_decision_statement.c  saml2_base_idabstract.c  saml2_condition_abstract.c  saml2_conditions.c  saml2_encrypted_element.c  saml2_evidence.c  saml2_key_info_confirmation_data.c  saml2_key_info_confirmation_data_type.c  saml2_name_id.c  saml2_one_time_use.c  saml2_proxy_restriction.c  saml2_statement_abstract.c  saml2_subject.c  saml2_subject_confirmation.c  saml2_subject_confirmation_data.c  saml2_subject_locality.c  samlp2_artifact_resolve.c  samlp2_artifact_response.c  samlp2_assertion_id_request.c  samlp2_attribute_query.c  samlp2_authn_query.c  samlp2_authn_request.c  samlp2_authz_decision_query.c  samlp2_extensions.c  samlp2_extensions.h  samlp2_idp_entry.c  samlp2_idp_list.c  samlp2_logout_request.c  samlp2_logout_response.c  samlp2_manage_name_id_request.c  samlp2_manage_name_id_response.c  (+13 more)
lasso/xml/soap-1.1/: soap_body.c  soap_detail.c  soap_envelope.c  soap_fault.c  soap_header.c
lasso/xml/ws/: wsa_attributed_any.c  wsa_attributed_qname.c  wsa_attributed_unsigned_long.c  wsa_attributed_uri.c  wsa_endpoint_reference.c  wsa_metadata.c  wsa_problem_action.c  wsa_reference_parameters.c  (+8 more)
tests/: basic_tests.c  login_tests.c  login_tests_saml2.c  metadata_tests.c  non_regression_tests.c  random_tests.c  tests.c  tests.h
tests/data/: Makefile.am  lasso.crt  lasso.csr  lasso.key  lasso.pkcs12  rootCA.crt  rootCA.key  rootCA.srl
tools/: api.py  check-lasso-sections.py  format-suppressions.py  generate_idwsf2_classes.py
tools/spatch/: add-second-arg-to-class-init.cocci
website/: convert-to-static.py  ezt.py
website/web/: doap.rdf
(+19 files in other folders)
